# pr2sem2

./: CMakeLists.txt  README.md
src/: main.c  main.c.save
